# amp-client-rust

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: accounts.rs  actors.rs  client.rs  lib.rs  oauth.rs  playbooks.rs
tests/: accounts_test.rs  actors_test.rs  errors_tests.rs  oauth_test.rs  playbooks_test.rs  query_parameters_in_request.rs
tests/common/: mod.rs
tests/fixtures/v1/api/accounts/: get-me-success.http
tests/fixtures/v1/api/actors/: get-actor-info-success.http  get-actor-logs-success.http  get-actor-stats-success.http  get-actor-success.http  list-actors-success.http  sync-actor-success.http
tests/fixtures/v1/api/playbooks/: create-playbook-created.http  list-playbooks-success.http  update-playbook-success.http
